Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30187

Wrong architecture in user agent on Mac

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 4.8.4
    • WebKit
    • None
    • Mac OS X Snow Leopard 10.6.8
      Intel CPU
    • macOS
    • 3fe6a74576f8c0c4e04343e0db94364f76fea407

    Description

      If I use QtWebKit on an Intel-based Mac to browse to a website. The user agent has "Mozilla/5.0 (Macintosh; PPC Mac OS X)" when the system is obviously not PPC. For example, using Safari on the same system has user agent "Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_7; en-us)".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jturcott Jocelyn Turcotte
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes