WebKit: Fix using macro to determine Mac user agent architecture

Using || operator with #ifdef is incorrect. As a result, the
architecture for the user agent is incorrectly set to PPC on an Intel
Mac.

This is a partial backport of r128775 in WebKit upstream.

Task-number: QTBUG-30187
Change-Id: I6842f113fd024ababaf67e76dfee8f93e0988d08
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>